--- a/src/App.css
+++ b/src/App.css
@@ -89,3 +89,10 @@ header {
   height: 100%;
   object-fit: cover;
 }
+
+.TeaserImg {
+  display: block;
+    margin-left: auto;
+    margin-right: auto;
+    height: 300px;
+}
